[metadata]
name=greedy
description=GREEDY Python package
long_description=file: README.md
long_description_content_type=text/markdown
[options]
setup_requires=
    setuptools>=42
    wheel
    setuptools_scm[toml]
    scikit-build>=0.11.0
    cmake>=3.18
    ninja
python_requires=>=3.6
[options.entry_points]
console_scripts=
    greedy=greedy:main
